tests/snapshots/snapshot_tests__array_min_and_copy_shift_sum.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_min_and_copy_shift_sum.vmt",
    status: Panic,
    used_instantiations: [],
}
