tests/snapshots/snapshot_tests__array_min_and_copy_shift_sum_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_min_and_copy_shift_sum_add.vmt",
    status: Panic,
    used_instantiations: [],
}
