tests/snapshots/snapshot_tests__array_min_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_min_const.vmt",
    status: Good,
    used_instantiations: [],
}
